# sstp-server

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.rst  constants.py  protocols.py  pyproject.toml  requirements.txt  run_benchmark.sh  setup.py  sstp-server.ini  sstpd.py  utils.py
.github/workflows/: release.yml
rust/: fcs.rs  lib.rs
rust/codec/: Cargo.toml  build.rs
rust/codec/src/: decode.rs  encode.rs  fcs.rs  lib.rs  ppp2sstp.rs  sstp.rs  sstp2ppp.rs
rust/codec/src/encode/: frame.rs  mod.rs
rust/codec/src/ppp/: decode.rs  encode.rs  mod.rs
rust/plugin/: Cargo.toml  build.rs  wrapper.h
rust/plugin/src/: hack.rs  key.rs  lib.rs  sys.rs
sstpd/: __init__.py  __main__.py  address.py  certtool.py  codec.pyi  codecmodule.c  constants.py  fcs.py  fcsmodule.c  packets.py  ppp.py  protocols.py  proxy_protocol.py  sstp.py  state.py  utils.py
tests/: benchmark.py  benchmark_codec.py  mock_pppd.py  options.sstpd  pppd.py  self-signed.pem  test.py
