[project]
name = "sstp-server"
description = "Secure Socket Tunneling Protocol (SSTP) VPN server."
authors = [
    { name = "Shell Chen", email = "me@sorz.org" }
]
license = "MIT"
urls = { Repository = "https://github.com/sorz/sstp-server" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Internet :: Proxy Servers",
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version", "readme"]

[project.scripts]
sstpd = "sstpd:run"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sstpd"]

[tool.setuptools-rust]
debug = false
ext-modules = [
    {target = "sstpd.codec", path = "Cargo.toml", binding = "PyO3"}
]

[tool.setuptools.dynamic]
version = {attr = "sstpd.__version__"}
readme = {file = ["README.rst"]}

[tool.cibuildwheel]
build = ["*_x86_64", "*_aarch64"]
