[package]
name = "sstp-codec"
version = "0.1.0"
edition = "2024"

[lib]
name = "codec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }
bytes = "1"
crc-fast = "1"
smallvec = "1"

[build-dependencies]
cfg_aliases = "0.2"

[dev-dependencies]
rand = "0.9"
